# ultimate-nag52-fw

./: .gcc-flags.json  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  CNAME  DIAGNOSTICS.yml  DIAG_SPEC.yml  Doxyfile  EGS52_NOTES.md  README.md  mem_map.md  partitions.csv  patchappinfo.py  pio_gendata.py  platformio.ini  pressure_manager.cpp  profiles.cpp  progname.py  sdkconfig.egs51  sdkconfig.esp-wrover-kit  sdkconfig.esp-wrover-kit.old  sdkconfig.unified  sdkconfig.unified.old  test.cpp  torque_converter.cpp
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  delete-old-dev.yml  fw_build_dev.yml  (+3 more)
diag_to_yaml/: Cargo.toml  test.yml
diag_to_yaml/src/: main.rs  spec.rs
include/: adv_opts.h  config.h  dtcs.h  fluid.h  gearbox_config.h  gearing.h  macros.h  pins.h  scn.h  scn_definition.h  scn_internal.h
lib/: convert.py  gen_headers.bat  gen_headers.sh
scripts/: egs52_dumping.py  generate_data.py  module_settings_parse.py
src/: CMakeLists.txt  adapt_maps.cpp  adapt_maps.h  board_config.cpp  board_config.h  clock.cpp  clock.hpp  common_structs.h  common_structs_ops.cpp  common_structs_ops.h  embed_data.h  ext_adc.cpp  ext_adc.h  gearbox.cpp  gearbox.h  ioexpander.cpp  ioexpander.h  legacy_shifter.cpp  legacy_shifter.h  main.cpp  maps.cpp  maps.h  maps_egs52.cpp  pins.cpp  pins.h  pressure_manager.cpp  pressure_manager.h  profiles.cpp  profiles.h  sensors.cpp  sensors.h  shift_manager.h  speaker.cpp  speaker.h  stored_data.cpp  stored_data.h  stored_map.cpp  stored_map.h  stored_table.cpp  stored_table.h  (+2 more)
test/: main.c  main.cpp
(+267 files in other folders)
